main/default/objects/CountryScoreCard__c/CountryScoreCard__c.object-meta.xml
<CustomObject>
    <description>Country Score Card</description>
    <label>CountryScoreCard</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>CountryScoreCard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CountryScoreCards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>