main/default/objects/CountryScoreCard__c/fields/Audit_Score_Card__c.field-meta.xml
<CustomField>
    <fullName>Audit_Score_Card__c</fullName>
    <label>Audit Score Card</label>
    <referenceTo>Audit_Score_Card__c</referenceTo>
    <relationshipLabel>CountryScoreCards</relationshipLabel>
    <relationshipName>CountryScoreCards</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>