main/default/objects/CountryScoreCard__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country</description>
    <inlineHelpText>Country</inlineHelpText>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>CountryScoreCards</relationshipLabel>
    <relationshipName>CountryScoreCards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>