main/default/objects/CountryScoreCard__c/fields/PrdGrp10__c.field-meta.xml
<CustomField>
    <fullName>PrdGrp10__c</fullName>
    <description>Product Group 10 Count</description>
    <inlineHelpText>Product Group 10 Count</inlineHelpText>
    <label>PrdGrp10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>