main/default/objects/CountryScoreCard__c/fields/PrdGrp1__c.field-meta.xml
<CustomField>
    <fullName>PrdGrp1__c</fullName>
    <description>Product Group 1 Count</description>
    <inlineHelpText>Product Group 1 Count</inlineHelpText>
    <label>PrdGrp1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>