main/default/objects/CountryScoreCard__c/fields/PrdGrp2__c.field-meta.xml
<CustomField>
    <fullName>PrdGrp2__c</fullName>
    <description>Product Group 2 Count</description>
    <inlineHelpText>Product Group 2 Count</inlineHelpText>
    <label>PrdGrp2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>