main/default/objects/CountryScoreCard__c/fields/Product_Group_10__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_10__c</fullName>
    <description>Product Group 10</description>
    <inlineHelpText>Product Group 10</inlineHelpText>
    <label>Product Group 10</label>
    <length>40</length>
    <type>Text</type>
</CustomField>