main/default/objects/CountryScoreCard__c/fields/Product_Group_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_2__c</fullName>
    <description>Product Group 2</description>
    <inlineHelpText>Product Group 2</inlineHelpText>
    <label>Product Group 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>