main/default/objects/CountryScoreCard__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>PrdGrp1__c +  PrdGrp2__c +  PrdGrp3__c +  PrdGrp4__c +  PrdGrp5__c +  PrdGrp6__c +  PrdGrp7__c +  PrdGrp8__c +  PrdGrp9__c +  PrdGrp10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>